--- a/cyclus-files/oat/cooling-time/cooling-time.xml.in
+++ b/cyclus-files/oat/cooling-time/cooling-time.xml.in
@@ -5,6 +5,7 @@
     <startmonth>1</startmonth>
     <startyear>2000</startyear>
     <decay>lazy</decay>
+    <explicit_inventory>true</explicit_inventory>
 </control>
 <archetypes>
         <spec>
